<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="2dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/profile"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="30dp"
                    android:id="@+id/outlinedEditTextProfileUsername"
                    android:hint="@string/edt_profile_username"
                    app:hintTextColor="@android:color/darker_gray"
                    android:padding="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:inputType="text"
                        android:layout_gravity="center"
                        android:background="@null"            />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="100dp"
                    android:id="@+id/outlinedEditTextProfileEmail"
                    android:hint="@string/edt_profile_email"
                    app:hintTextColor="@android:color/darker_gray"
                    android:padding="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        android:layout_gravity="center"
                        android:background="@null"                />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="170dp"
                    android:id="@+id/outlinedEditTextProfileMobileno"
                    android:hint="@string/edt_profile_mobileno"
                    app:hintTextColor="@android:color/darker_gray"
                    android:padding="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_profile_mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:maxLines="1"
                        android:inputType="phone"
                        android:layout_gravity="center"
                        android:background="@null"                />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="240dp"
                    android:id="@+id/outlinedSpinnerProfileGender"
                    android:hint="@string/gender"
                    app:hintTextColor="@android:color/darker_gray"
                    android:padding="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/autoCompleteProfileGender"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_regular"

                        android:textColor="@color/black"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_update"
                    android:backgroundTint="@color/orange"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="150dp"
                    android:padding="15dp"
                    android:text="@string/btn_update"
                    />
            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </ScrollView>


</FrameLayout>