<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ContactUs"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_picture" />

        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:id="@+id/outlinedEditTextMobileNoContactus"
            android:hint="@string/edt_contactus_mobileno"
            app:hintTextColor="@android:color/darker_gray"
            android:padding="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_mobileno_contactus"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:inputType="phone"
            android:layout_gravity="center"
            android:background="@null"            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="110dp"
            android:id="@+id/outlinedEditTextMessageConatctus"
            android:hint="@string/edt_contactus_message"
            app:hintTextColor="@android:color/darker_gray"
            android:padding="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_message_contactus"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:maxLines="4"
                android:inputType="text"
                android:layout_gravity="center"
                android:background="@null"                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send"
            android:backgroundTint="#FF9800"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginTop="70dp"
            android:padding="15dp"
            android:text="@string/btn_send"
            />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="1dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <!--ImageVIew to display our Course Image-->

                <!--Text View to display Course Name-->
                <ImageView
                    android:id="@+id/imgCallIconContactus"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_phone_black_24" />

                <TextView
                    android:id="@+id/txtviewContactUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Call_us_on_8888888888"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    />

                <!--Text VIew to display COurse Rating-->
                <!--Image used in present in drawable folder-->

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    </ScrollView>


</FrameLayout>